<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">沃惠省</string>
    <string name="databaseversion">1</string>
    <string name="url">http://221.208.198.149:9090/WoohsIfc/interface/</string>
    <string name="img_url">http://www.wohuisheng.cn/interface/uploadfile.action</string>
    <string name="sharecoupon_info">[沃惠省]我有%s,要组队吗？</string>
    <string name="sharecoupon_url">http://www.wohuisheng.cn/client/coupon.action?coupon.id=</string>
    <string name="shareself_info">
        我正在使用沃惠省手机客户端，看看网友的店铺和优惠，吃饭或逛街时还省钱，你也试试哈：http://221.208.198.149:9090/WoohsIfc/interface/download.action
    </string>
    <string name="searchhint">输入商户名搜索</string>
    <string name="neterrorhint">对不起，网络出错，请检查后重试！</string>
    <string name="nodatahint">对不起，没有获取任何数据，请重试！</string>
    <string name="nettry">刷新重试</string>
    <string name="main_tab_my">我的</string>
    <string name="main_tab_location">附近</string>
    <string name="main_tab_more">更多</string>
    <string name="main_tab_index">首页</string>
    <string name="moreandmore_head">更多</string>
    <string name="moreandmore_feedback">意见反馈</string>
    <string name="moreandmore_grade">给我们打分</string>
    <string name="moreandmore_update">版本更新</string>
    <string name="moreandmore_tellfriend">告诉朋友</string>
    <string name="moreandmore_shareToWeChat">分享到微信</string>
    <string name="moreandmore_shareToSina">分享到新浪微博</string>
    <string name="moreandmore_maybeyoulike">你可能还喜欢</string>
    <string name="wechat_name">微信</string>
    <string name="wechatfriend_name">微信朋友圈</string>
    <string name="sina_name">新浪微博</string>
    <string name="title_activity_feedback">FeedbackActivity</string>
    <string name="feedback_head_text">意见反馈</string>
    <string name="feedback_edittext_hint">请输入反馈，我们将为您不断改进(500字以内)</string>
    <string name="feedback_phone_hint">手机号码:必填，便于我们给您反馈</string>
    <string name="feedback_head_submitbutton">提&#160;&#160;&#160;&#160;交</string>
    <string name="progressbar_textview">正在提交…</string>
    <string name="kind_isback">正在查询…</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_about_us">AboutUsActivity</string>
    <string name="title_activity_user_help">UserHelpActivity</string>
    <string name="publish_by_yilin">亿林产品</string>
    <string name="more_textview_userhelp">用户帮助</string>
    <string name="more_textview_aboutus">关于我们</string>
    <string name="more_textview_contactus">客服电话</string>
    <string name="ourphone">0455–8600888</string>
    <string name="ourphone_1">0455–8306888</string>
    <string name="download_url">http://221.208.198.149:9090/WoohsIfc/interface/download.action</string>
    <string name="cancel">取消</string>
    <string name="aboutus_info">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;"我惠省"网站(www.wohuisheng.cn)与"沃惠省"手机客户端(for安卓/苹果)是利用位置技术和搜索技术为用户提供精准生活信息服务的移动互联网平台。利用网站、手机客户端、二维码手册三种方式发布本地商铺的优惠信息，用户利用智能手机扫描网站或者二维码手册上的优惠信息二维码，在手机上获得电子优惠券；也可安装手机客户端，通过手机客户端直接获得电子优惠券，持手机到相应店铺即可使用。平台是我省首家功能完善的本地化移动互联网应用产品，内容涵盖美食、休闲、丽人、家居、教育等12个与百姓生活关系密切的分类，各个县（市）网站和客户端内容按照位置技术自动定位。
        同时与绥化联通合作，推出“沃惠省”手机客户端，所有内容均可在手机客户端中查询和使用。 公司将于2014年上半年陆续开通哈尔滨，齐齐哈尔，牡丹江等省内其他城市。
    </string>
    <string name="companyurl">沃惠省平台客户端(Android)1.0\n
        黑龙江盛昌泰科技有限公司版权所有\n
        Copyright@2013 All right riserved\n
        开发者：黑龙江亿林网络股份有限公司\n
        网址: http://www.cnhlj.cn
    </string>
    <string name="userhelp">
        沃惠省帮您找美食、小吃、生活、服务，帮您省钱！沃惠省客户端是中国领先的城市生活消费指南应用，致力于为网友提供餐饮、购物、休闲娱乐以及生活服务等领域的商户信息、消费优惠以及发布消费评价的互动平台；沃惠省亦为中小商户提供一站式精准营销解决方案，包括电子优惠券、关键字推广等。沃惠省已经成功在移动互联网布局这一模式，沃惠省手机客户端已经成为城市生活必备的APP应用之一！
    </string>
    <string name="userAgreementUrl">http://www.wohuisheng.cn/upload/apk/userargument.html</string>
    <string name="userAgreementwarn_1">我同意</string>
    <string name="userAgreementwarn_2">《沃惠省用户协议》</string>

    <!-- ********新版string从这里开始******** -->

    <!-- main title -->
    <string name="title_main">沃惠省</string>
    <string name="title_shops">商家</string>
    <string name="title_profile">我的</string>
    <string name="title_more">更多</string>

    <!-- 商家列表 -->
    <string name="locating">正在定位...</string>

    <string name="poi_lowest_price_after">起</string>
</resources>