<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

    <LinearLayout
            android:id="@+id/bottom_bar_layout"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:background="#cc000000">

        <FrameLayout
                android:id="@+id/home_layout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.0">

            <ImageView
                    android:id="@+id/home_iv"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:duplicateParentState="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/tab_home"/>

            <TextView
                    android:id="@+id/home_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:duplicateParentState="true"
                    android:text="@string/main_tab_index"
                    android:textColor="@color/tab_text_color"
                    android:textSize="14sp"/>
        </FrameLayout>

        <FrameLayout
                android:id="@+id/shop_list_layout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:background="#00ff0000">

            <ImageView
                    android:id="@+id/shop_list_iv"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:duplicateParentState="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/tab_location"/>

            <TextView
                    android:id="@+id/shop_list_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:duplicateParentState="true"
                    android:text="@string/main_tab_location"
                    android:textColor="@color/tab_text_color"
                    android:textSize="14sp"/>
        </FrameLayout>

        <FrameLayout
                android:id="@+id/profile_layout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.0">

            <ImageView
                    android:id="@+id/profile_iv"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:duplicateParentState="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/tab_profile"/>

            <TextView
                    android:id="@+id/profile_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:duplicateParentState="true"
                    android:text="@string/main_tab_my"
                    android:textColor="@color/tab_text_color"
                    android:textSize="14sp"/>
        </FrameLayout>

        <FrameLayout
                android:id="@+id/more_layout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:background="#00ff0000">

            <ImageView
                    android:id="@+id/more_iv"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:duplicateParentState="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/tab_more"/>

            <TextView
                    android:id="@+id/more_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:duplicateParentState="true"
                    android:text="@string/main_tab_more"
                    android:textColor="@color/tab_text_color"
                    android:textSize="14sp"/>
        </FrameLayout>
    </LinearLayout>


    <FrameLayout
            android:id="@+id/container"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_above="@id/bottom_bar_layout">
    </FrameLayout>

</RelativeLayout>