<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <RelativeLayout
        android:id="@+id/main_layout_index_top"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/title_bar" >

        <TextView
            android:id="@+id/main_text_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="绥化"
            android:textColor="#ffffff"
            android:textSize="16sp" />

        <ImageButton
            android:id="@+id/main_btn_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@id/main_text_city"
            android:background="@drawable/arrow_down" />

        <EditText
            android:id="@+id/index_edit_search"
            android:layout_width="fill_parent"
            android:layout_height="34dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_toRightOf="@id/main_btn_city"
            android:background="@drawable/search_bar_button_background_normal"
            android:enabled="true"
            android:gravity="center_vertical"
            android:hint="@string/searchhint"
            android:paddingLeft="20dp"
            android:singleLine="true"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/index_img_search"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_alignLeft="@id/index_edit_search"
            android:layout_alignTop="@id/index_edit_search"
            android:layout_margin="2dp"
            android:src="@drawable/ic_btn_search" />
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/index_layout_middle"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/main_layout_index_top"
        android:background="#00eaebeb"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/index_layout_middle_netloading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical" >

            <ProgressBar
                android:id="@+id/loading_process_dialog_progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:indeterminate="false"
                android:indeterminateDrawable="@drawable/loading_style" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/index_layout_middle_neterror"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/neterrorhint"
                android:textSize="20sp" />

            <Button
                android:id="@+id/index_btn_nettry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/nettry"
                android:textSize="20sp" >
            </Button>
        </LinearLayout>

        <GridView
            android:id="@+id/main_grid_industry"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="#00eaebeb"
            android:columnWidth="90dp"
            android:gravity="center"
            android:horizontalSpacing="10dp"
            android:listSelector="#00ababab"
            android:numColumns="auto_fit"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:scrollbars="none"
            android:stretchMode="columnWidth"
            android:verticalSpacing="10dp" >
        </GridView>
    </FrameLayout>

</RelativeLayout>